Archive2/78/69d946c4a14949/output
main.cpp:1:67: error: no matching function for call to 'foo'
template <typename T> auto foo(T t) -> decltype(foo(t)); decltype(foo(0)) x;
                                                                  ^~~
main.cpp:1:28: note: candidate template ignored: substitution failure [with T = int]: use of undeclared identifier 'foo'
template <typename T> auto foo(T t) -> decltype(foo(t)); decltype(foo(0)) x;
                           ^                    ~~~
1 error generated.
