Archive2/78/69d946c4a14949/main.cpp
template <typename T> auto foo(T t) -> decltype(foo(t)); decltype(foo(0)) x;